# Kida

./: .gitmodules  CMakeLists.txt
src/: Kida.cpp
